k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptimekuma-service
  namespace: uptimekuma
spec:
  selector:
    app: uptimekuma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
