k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptimekuma-ingress
  namespace: uptimekuma
spec:
  ingressClassName: ngrok
  rules:
    - host: open-painfully-locust.ngrok-free.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptimekuma-service
                port:
                  number: 80
